# portaldot-hackathon-2026-trion-oracle-analys

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SUBMISSION.md
.github/workflows/: ci.yml
contracts/behavioral_limit_order/: Cargo.toml
contracts/behavioral_limit_order/src/: lib.rs
contracts/btcp_escrow/: Cargo.toml
contracts/btcp_escrow/src/: lib.rs
contracts/trion_signal_gate/: Cargo.toml
contracts/trion_signal_gate/src/: lib.rs
oracle-bridge/: Cargo.toml
oracle-bridge/src/: main.rs
scripts/: deploy.sh  local_node.sh  test.sh
sdk/: demo.py  deploy.py  portaldot_client.py
