[workspace]
members = [
    "oracle-bridge",
]
resolver = "2"

[workspace.package]
authors = ["Hudu Yusuf (Analys) <dev-analyshd>"]
edition = "2021"
license = "CC0-1.0"

# Ink! contracts are NOT workspace members — they use their own isolated workspaces.
# Build each contract with: cd contracts/<name> && cargo contract build --release

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
