[package]
name = "trion-portaldot-bridge"
version = "1.0.0"
authors = ["Hudu Yusuf (Analys) <dev-analyshd>"]
edition = "2021"
description = "TRION → PortalDot oracle bridge. Polls TRION Oracle API, submits behavioral signals to TRIONSignalGate Ink! contract on PortalDot."
license = "CC0-1.0"

[[bin]]
name = "trion-portaldot-bridge"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha3 = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
# subxt connects to live PortalDot node — add after deploying:
# subxt = { version = "0.37", features = ["substrate-compat"] }
# sp-core = "31"
