[package]
name = "behavioral_limit_order"
version = "1.0.0"
authors = ["Hudu Yusuf (Analys) <dev-analyshd>"]
edition = "2021"
description = "BTCP Behavioral Limit Order — BLO engine in Ink!. Orders matched by behavioral score, not speed or wealth."
license = "CC0-1.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[profile.release]
overflow-checks = false

[workspace]
