[package]
name = "trion_signal_gate"
version = "1.0.0"
authors = ["Hudu Yusuf (Analys) <dev-analyshd>"]
edition = "2021"
description = "TRION Behavioral Signal Gate — Ink! oracle contract for PortalDot"
license = "CC0-1.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[profile.release]
overflow-checks = false

[workspace]
